
  * Added the following new configuration options: server.c2s_io_timeout,
    server.c2s_idle_timeout, server.s2s_io_timeout, server.s2s_idle_timeout,
    server.heartbeat_interval, cluster.allowed_hosts, server.http_io_timeout,
    server.query_progress_rate_limit, cluster.allow_anonymous,
    cluster.allow_drop_table, server.query_max_concurrent_shards,
    server.query_max_concurrent_shards_per_host


EventQL v0.3.2 (v0.3.2, gitb0ea6bc) beta; 2016-09-13 15:23:08 +0000

  * Fixed a bug in the eventql client (evql) where missing HOME and USER
    env variables would lead to an assertion on some libc++ implementations

  * Added --history_file and --history_maxlen flags to the eventql client (evql)


EventQL v0.3.1 (v0.3.1, git2da7f66) beta; 2016-09-04 16:11:19 +0000

  * Fixed a bug in the standalone backend where any ALTER TABLE statements
    would fail with "table already exists"

  * Changed the mapreduce reduce shard allocation so that (in most cases)
    repeated executions of the same job will result in (unchanged) reduce
    shards being scheduled on the same machines as before to improve cache
    hit rates.

  * Changed the default policy for handling failed mapreduce shards from ERROR
    (return an error to the user) to IGNORE (ignore the missing shard and
    continue without it)

  * Changed kDefaultMaxConcurrentTasks (the default maximum number of threads
    to be started for a single sql query) from 32 to 64

  * Added a new execution step to the mapreduce scheduler where, before running
    a given map task on any of the candidate servers, we try to retrieve it
    from cache on each of the candidate servers (and bail early if we find it).

  * Added verbose debug-logging to the MapReduce scheduler.

  * Added many documentation improvements, dockerfiles, examples, etc


EventQL v0.3.0 (v0.3.0-rc0, gita2fa235) beta; 2016-07-25 22:53:29 +0000

  * Renamed the project to EventQL (the previous name was ZenDB Z1)
