@@ -236,6 +236,7 @@ int main(int argc, const char** argv) {
   evql_conf_set(conf, "server.query_progress_rate_limit", "250000");
   evql_conf_set(conf, "server.query_max_concurrent_shards", "256");
   evql_conf_set(conf, "server.query_max_concurrent_shards_per_host", "4");
+  evql_conf_set(conf, "server.query_failed_shard_policy", "tolerate");
 
   if (flags.isSet("standalone")) {
     evql_conf_set(conf, "cluster.coordinator", "standalone");
