@@ -42,7 +42,8 @@ EventQL v0.4.0 beta;
     server.heartbeat_interval, cluster.allowed_hosts, server.http_io_timeout,
     server.query_progress_rate_limit, cluster.allow_anonymous,
     cluster.allow_drop_table, server.query_max_concurrent_shards,
-    server.query_max_concurrent_shards_per_host
+    server.query_max_concurrent_shards_per_host,
+    server.query_failed_shard_policy
 
 
 EventQL v0.3.2 (v0.3.2, gitb0ea6bc) beta; 2016-09-13 15:23:08 +0000
